# React-TinyMCE-OpenAI-and-Django

./: .env.sample  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: Makefile
backend/src/: env.py  settings.py
backend/staticfiles/frontend/dev/: index.html
backend/staticfiles/frontend/dev/assets/: index-DCsnIazO.js
backend/staticfiles/frontend/prod/: index.html
backend/staticfiles/frontend/prod/assets/: index-BxsZYEhL.js
landing-page-engine/: package.json
